generate docs for auth
